- the "delete" cascade will load in all child objects, if they were not
loaded already.  this can be turned off (i.e. the old behavior) by setting 
passive_deletes=True on a relation().
- MySQL catches exception on "describe" and reports as NoSuchTableError
- further fixes to sqlite booleans, weren't working as defaults
- fix to postgres sequence quoting when using schemas

0.3.0
- General:
    - logging is now implemented via standard python "logging" module.
    "echo" keyword parameters are still functional but set/unset
    log levels for their respective classes/instances.  all logging
    can be controlled directly through the Python API by setting
    INFO and DEBUG levels for loggers in the "sqlalchemy" namespace.
    class-level logging is under "sqlalchemy.<module>.<classname>",
    instance-level logging under "sqlalchemy.<module>.<classname>.0x..<00-FF>".
    Test suite includes "--log-info" and "--log-debug" arguments
    which work independently of --verbose/--quiet.  Logging added
    to orm to allow tracking of mapper configurations, row iteration.
    - the documentation-generation system has been overhauled to be
    much simpler in design and more integrated with Markdown
- Specific Databases:
    - SQLite:
    - sqlite boolean datatype converts False/True to 0/1 by default
    - fixes to Date/Time (SLDate/SLTime) types; works as good as postgres 
    now [ticket:335]
    - MS-SQL: 
    - fixes bug 261 (table reflection broken for MS-SQL case-sensitive 
    databases)
    - can now specify port for pymssql
    - introduces new "auto_identity_insert" option for auto-switching 
    between "SET IDENTITY_INSERT" mode when values specified for IDENTITY columns 
    - now supports multi-column foreign keys
    - fix to reflecting date/datetime columns
    - NCHAR and NVARCHAR type support added
    - Oracle:
    - Oracle has experimental support for cx_Oracle.TIMESTAMP, which requires